chore: add holostars uproar

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -364,6 +364,22 @@ id = "oga"
 youtube = "UCwL7dgTxKo8Y4RFIKWaf8gA"
 
 [[vtubers]]
+id = "fuma"
+youtube = "UCc88OV45ICgHbn3ZqLLb52w"
+
+[[vtubers]]
+id = "uyu"
+youtube = "UCgRqGV1gBf2Esxh0Tz1vxzw"
+
+[[vtubers]]
+id = "gamma"
+youtube = "UCkT1u65YS49ca_LsFwcTakw"
+
+[[vtubers]]
+id = "rio"
+youtube = "UCdfMHxjcCc2HSd9qFvfJgjg"
+
+[[vtubers]]
 id = "luna"
 youtube = "UCQYADFw7xEJ9oZSM5ZbqyBw"
 bilibili = "265224956"
