feat(web): bring back service worker

--- a/web/ngsw-config.json
+++ b/web/ngsw-config.json
@@ -12,7 +12,8 @@
           "/manifest.webmanifest",
           "/*.css",
           "/*.js",
-          "/i18n/*.js"
+          "/i18n/*.js",
+          "/pages/*.js"
         ]
       }
     },
