feat(web): add app-shell

--- a/web/angular.json
+++ b/web/angular.json
@@ -34,7 +34,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist",
+            "outputPath": "dist/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -128,6 +128,49 @@
             }
           },
           "defaultConfiguration": ""
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/server",
+            "main": "src/main.server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "optimization": false,
+            "sourceMap": true,
+            "i18nMissingTranslation": "error",
+            "extractLicenses": false
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                },
+                {
+                  "replace": "src/app/layout/sidenav/sidenav.ts",
+                  "with": "src/app/layout/sidenav/sidenav.server.ts"
+                }
+              ],
+              "optimization": true,
+              "extractLicenses": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "app-shell": {
+          "builder": "@angular-devkit/build-angular:app-shell",
+          "options": {
+            "route": "/share-target"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "holostats:build:production",
+              "serverTarget": "holostats:server:production"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
