--- a/web/package.json
+++ b/web/package.json
@@ -22,6 +22,7 @@
     "@angular/material": "~13.2.2",
     "@angular/platform-browser": "~13.2.2",
     "@angular/platform-browser-dynamic": "~13.2.2",
+    "@angular/platform-server": "~13.2.2",
     "@angular/router": "~13.2.2",
     "@angular/service-worker": "~13.2.2",
     "@cloudflare/kv-asset-handler": "^0.1.0",
