--- a/web/package.json
+++ b/web/package.json
@@ -12,19 +12,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.2",
-    "@angular/cdk": "~13.2.2",
-    "@angular/common": "~13.2.2",
-    "@angular/compiler": "~13.2.2",
-    "@angular/core": "~13.2.2",
-    "@angular/forms": "~13.2.2",
-    "@angular/localize": "~13.2.2",
-    "@angular/material": "~13.2.2",
-    "@angular/platform-browser": "~13.2.2",
-    "@angular/platform-browser-dynamic": "~13.2.2",
-    "@angular/platform-server": "~13.2.2",
-    "@angular/router": "~13.2.2",
-    "@angular/service-worker": "~13.2.2",
+    "@angular/animations": "^14.1.0",
+    "@angular/cdk": "^14.1.0",
+    "@angular/common": "^14.1.0",
+    "@angular/compiler": "^14.1.0",
+    "@angular/core": "^14.1.0",
+    "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
+    "@angular/material": "^14.1.0",
+    "@angular/platform-browser": "^14.1.0",
+    "@angular/platform-browser-dynamic": "^14.1.0",
+    "@angular/platform-server": "^14.1.0",
+    "@angular/router": "^14.1.0",
+    "@angular/service-worker": "^14.1.0",
     "@cloudflare/kv-asset-handler": "^0.1.0",
     "@floating-ui/dom": "^0.1.7",
     "@sentry/browser": "^6.16.1",
@@ -39,10 +39,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.3",
-    "@angular/cli": "~13.2.3",
-    "@angular/compiler-cli": "~13.2.2",
-    "@angular/language-service": "~13.2.2",
+    "@angular-devkit/build-angular": "^14.1.0",
+    "@angular/cli": "^14.1.0",
+    "@angular/compiler-cli": "^14.1.0",
+    "@angular/language-service": "^14.1.0",
     "@cloudflare/workers-types": "^2.1.0",
     "@types/d3-array": "^3.0.2",
     "@types/d3-ease": "^3.0.0",
@@ -54,6 +54,6 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.7.4"
   }
 }
