--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "holostats-live-chat",
     "holostats-request",
     "holostats-rss-refresh",
+    "holostats-stream-metadata",
     "holostats-stream-stat",
     "holostats-subscribe",
     "holostats-tracing",
