--- a/server/holostats-request/Cargo.toml
+++ b/server/holostats-request/Cargo.toml
@@ -25,6 +25,8 @@ reqwest = { version = "0.11.9", default-features = false, features = [
 ] }
 holostats-config = { path = "../holostats-config" }
 holostats-tracing = { path = "../holostats-tracing" }
+base64 = "0.13.0"
+quick-protobuf = "0.8.0"
 
 [dev-dependencies]
 pretty_assertions = "1.1.0"
