--- a/server/holostats-stream-metadata/Cargo.toml
+++ b/server/holostats-stream-metadata/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "holostats-live-chat"
+name = "holostats-stream-metadata"
 version = "0.1.0"
 authors = ["PoiScript <poiscript@gmail.com>"]
 edition = "2018"
 publish = false
 
 [[bin]]
-name = "live_chat"
+name = "stream_metadata"
 path = "main.rs"
 
 [dependencies]
