--- a/server/holostats-database/Cargo.toml
+++ b/server/holostats-database/Cargo.toml
@@ -17,7 +17,8 @@ sqlx = { version = "0.6.1", default-features = false, features = [
     "macros",
     "postgres",
     "chrono",
-    "migrate"
+    "migrate",
+    "offline"
 ] }
 tokio = { version = "1.16.1", features = ["macros"] }
 tracing = "0.1.30"
