--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -12,13 +12,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "importHelpers": true,
-    "target": "es2020",
+    "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
     "lib": ["ESNext", "dom"],
     "allowSyntheticDefaultImports": true,
     "paths": {
       "vtubers": ["./vtubers.ts"]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
