feat(web): upgrade to angular 15.1 and bring back app-shell

--- a/web/tsconfig.server.json
+++ b/web/tsconfig.server.json
@@ -5,8 +5,5 @@
     "outDir": "./out-tsc/server",
     "types": ["node", "gapi", "gapi.auth2"]
   },
-  "files": ["src/main.server.ts"],
-  "angularCompilerOptions": {
-    "entryModule": "./src/app/app.server.module#AppServerModule"
-  }
+  "files": ["src/main.server.ts"]
 }
