fix(web): disable critical css in angular cli

--- a/web/angular.json
+++ b/web/angular.json
@@ -69,7 +69,7 @@
                 "scripts": true,
                 "styles": {
                   "minify": true,
-                  "inlineCritical": true
+                  "inlineCritical": false
                 },
                 "fonts": true
               },
