chore: add new hololive en member

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -396,6 +396,22 @@ id = "noir_vesper"
 youtube = "UCDRWSO281bIHYVi-OV3iFYA"
 
 [[vtubers]]
+id = "gavis_bettel"
+youtube = "UCHP4f7G2dWD4qib7BMatGAw"
+
+[[vtubers]]
+id = "machina_x_flayon"
+youtube = "UC060r4zABV18vcahAWR1n7w"
+
+[[vtubers]]
+id = "banzoin_hakka"
+youtube = "UC7gxU6NXjKF1LrgOddPzgTw"
+
+[[vtubers]]
+id = "josuiji_shinri"
+youtube = "UCMqGG8BRAiI1lJfKOpETM_w"
+
+[[vtubers]]
 id = "ayamy"
 youtube = "UCr9p1ZjLKgfaoqNorY7PiWQ"
 bilibili = "521070071"
