feat: add hololive english advent

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -320,6 +320,22 @@ id = "ouro"
 youtube = "UCmbs8T6MWqUHP1tIQvSgKrg"
 
 [[vtubers]]
+id = "koseki_bijou"
+youtube = "UC9p_lqQ0FEDz327Vgf5JwqA"
+
+[[vtubers]]
+id = "shiori_novella"
+youtube = "UCgnfPPb9JI3e9A4cXHnWbyg"
+
+[[vtubers]]
+id = "fuwamoco"
+youtube = "UCt9H_RpQzhxzlyBxFqrdHqA"
+
+[[vtubers]]
+id = "nerissa_ravencroft"
+youtube = "UC_sFNM0z0MWm9A6WlKPuMMg"
+
+[[vtubers]]
 id = "mumei"
 youtube = "UC3n5uGu18FoCy23ggWWp8tA"
 
