--- a/ngsw-config.json
+++ b/ngsw-config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/service-worker/config/schema.json",
-  "index": "/index.html",
+  "index": "/pwa",
   "assetGroups": [
     {
       "name": "app",
