--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,8 +2,9 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/server",
-    "typeRoots": ["node_modules/@types"]
+    "outDir": "./out-tsc/app",
+    "types": []
   },
-  "include": ["src/main.server.ts"]
+  "files": ["src/main.ts", "src/polyfills.ts"],
+  "include": ["src/**/*.d.ts"]
 }
