build: add packageManager in package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "ng lint"
   },
   "private": true,
+  "packageManager": "yarn@1.22.19",
   "dependencies": {
     "@angular/animations": "^16.2.9",
     "@angular/cdk": "^16.2.8",
