--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "ng serve --hmr",
     "start": "ng serve --hmr",
     "dev:ssr": "wrangler pages dev dist/cloudflare --compatibility-date=2021-09-20",
+    "deploy": "wrangler pages deploy dist/cloudflare",
     "extract-i18n": "ng extract-i18n --format json --output-path ./src/i18n",
     "build": "node build.js",
     "test": "ng test",
